--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "learning.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon learning.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
